test/extended/authorization/per_node_validatingadmissionpolicy.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: "only-allow-name-matching-node-configmaps"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        # notice you cannot restrict DELETEs.  Your per-node actor should not have deletion powers.
        # it probably shouldn't have create powers either, but we can control that
        operations:  ["CREATE", "UPDATE"]
        resources:   ["configmaps"]
  variables:
    - name: hasNodeName
      expression: ('authentication.kubernetes.io/node-name' in request.userInfo.extra)
    - name: isPartitionedServiceAccount
      expression: request.userInfo.username == "system:serviceaccount:e2e-ns:default"
  validations:
    - expression: "!variables.isPartitionedServiceAccount || (!variables.hasNodeName) || object.metadata.name == request.userInfo.extra[\"authentication.kubernetes.io/node-name\"][0]"
      message: "this user may only modify configmaps that belong to the node the pod is running on"
